gio/gtestdbus.c: don't use non-standard %m printf modifier

https://bugzilla.gnome.org/show_bug.cgi?id=756706