gio/gtestdbus.c
@@ -24,6 +24,8 @@
 
 #include <stdlib.h>
 #include <stdio.h>
+#include <errno.h>
+#include <string.h>
 #include <gstdio.h>
 #ifdef G_OS_UNIX
 #include <unistd.h>
@@ -243,14 +245,14 @@ watcher_init (void)
       /* fork a child to clean up when we are killed */
       if (pipe (pipe_fds) != 0)
         {
-          g_warning ("pipe() failed: %m");
+          g_warning ("pipe() failed: %s", strerror (errno));
           g_assert_not_reached ();
         }
 
       switch (fork ())
         {
         case -1:
-          g_warning ("fork() failed: %m");
+          g_warning ("fork() failed: %s", strerror (errno));
           g_assert_not_reached ();
           break;
 
